@@ -1,3 +1,13 @@
+2003-08-20  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Richard.
+
+	- fixed 3292036 - albertsons.com world leak of 2 WebDataSource and 2 WebHTMLRepresentation objects
+	
+        * kwq/KWQKHTMLPart.mm:
+        (KWQKHTMLPart::canCachePage): Test for parentPart() even if there
+	is no document.
+
 2003-08-20  Richard Williamson   <rjw@apple.com>
 
 	Fixed 3242508.  Japanese (and other non latin1 scripts) line breaking incorrect when mixed with latin1.
